# ArepoCC85

./: .gitignore  Makefile  README.md  Template-Config.sh  Template-Makefile.systype  check.py  config-makefile  defines_extra  make-command  prepare-config.perl  pyproject.toml  test.sh
documentation/: Makefile
documentation/source/: conf.py  config-options.md  development.md  diagnosticfiles.md  migration.md  parameterfile.md  running.md  simtypes.md  snapshotformat.md
examples/alfven_wave_1d/: check.py  create.py
examples/cc85_wind/: CC85.py  Config-old.sh  Config.sh  compile-command  ic-create-large-profileSet.py  ic-create-large.py  ic-create.py  momFlux.py  param-old.txt  param.txt  resubmit-command.sh  resume-job  slice.py  slurm-script
examples/cooling_box/: Config.sh  check.py  create.py  param.txt
examples/cosmo_box_gravity_only_3d/: Config.sh  check.py  create.py  param.txt  param_music.txt  param_ngenic.txt
examples/cosmo_box_star_formation_3d/: check.py  create.py  param.txt  param_ngenic.txt
examples/cosmo_zoom_gravity_only_3d/: check.py  create.py  param.txt  param_music.txt  param_parent.txt
examples/current_sheet_2d/: check.py
examples/galaxy_merger_star_formation_3d/: Config.sh  Config_ADDBACKGROUNDGRID.sh  check.py  create.py  param.txt  param_ADDBACKGROUNDGRID.txt
examples/gresho_2d/: check.py  create.py  param.txt
examples/interacting_blastwaves_1d/: check.py  create.py  param.txt
examples/isolated_galaxy_collisionless_3d/: Makefile.galic  check.py  create.py  param.txt  (+1 more)
requirements/: requirements-dev.txt  requirements.txt
(+77 files in other folders)
