[tool.poetry]
name = "arepocc85"
version = "0.1.0"
description = "CC85 in Arepo"
authors = ["Alankar Dutta <alankardutta@iisc.ac.in>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.3"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
h5py = "^3.8.0"
pre-commit = "^3.3.2"

[tool.poetry.group.dev.dependencies]
seaborn = "^0.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
